live/cppsrc/stuff
make ../bin/circle
make[1]: Entering directory '/home/john/src/primalmud/live/cppsrc'
g++ -c -g -O2 -DPRIMAL_LIVE -Wall -fpermissive -Wwrite-strings   dg_comm.c
dg_comm.c:140:12: warning: "/*" within comment [-Wcomment]
            /* get char_data, move to next token */
            ^
dg_comm.c:141:12: error: ‘type’ does not name a type
            type[i] = *p;
            ^
dg_comm.c:142:15: error: expected constructor, destructor, or type conversion before ‘=’ token
            *s = '\0';
               ^
dg_comm.c:143:12: error: ‘p’ does not name a type
            p = any_one_name(++p, name);
            ^
dg_comm.c:146:12: error: ‘tokens’ does not name a type
            tokens[++i] = ++s;
            ^
dg_comm.c:147:12: error: expected unqualified-id before ‘break’
            break;
            ^
dg_comm.c:149:8: error: expected unqualified-id before ‘case’
        case '`':
        ^
dg_comm.c:152:15: error: expected constructor, destructor, or type conversion before ‘=’ token
            *s = '\0';
               ^
dg_comm.c:153:12: error: ‘p’ does not name a type
            p = any_one_name(++p, name);
            ^
dg_comm.c:162:12: error: ‘tokens’ does not name a type
            tokens[++i] = ++s;
            ^
dg_comm.c:163:12: error: expected unqualified-id before ‘break’
            break;
            ^
dg_comm.c:165:8: error: expected unqualified-id before ‘case’
        case '\\':
        ^
dg_comm.c:167:14: error: expected constructor, destructor, or type conversion before ‘++’ token
            *s++ = *p++;
              ^
dg_comm.c:168:12: error: expected unqualified-id before ‘break’
            break;
            ^
dg_comm.c:170:8: error: expected unqualified-id before ‘default’
        default:
        ^
dg_comm.c:172:8: error: expected declaration before ‘}’ token
        }
        ^
Makefile:204: recipe for target 'dg_comm.o' failed
make[1]: *** [dg_comm.o] Error 1
make[1]: Leaving directory '/home/john/src/primalmud/live/cppsrc'
Makefile:67: recipe for target 'all' failed
make: *** [all] Error 2
